added section and articles

--- a/index.html
+++ b/index.html
@@ -3,7 +3,37 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>CatSpecies</title>
+    <link rel="shortcut icon" href="images/icon.svg" type="img/icon" />
+    <link rel="stylesheet" href="styles/styles.css" />
   </head>
-  <body></body>
+  <body>
+    <section>
+      <h1>Cat Species</h1>
+      <div>
+        <img src="images/image1.jpeg" alt="white Cat" />
+        <p>
+          The Bengal cat is a breed of hybrid cat created from crossing of an
+          Asian leopard cat with domestic cats, especially the spotted Egyptian
+          Mau.
+        </p>
+      </div>
+      <div>
+        <img src="images/image2.jpeg" alt="cat" />
+        <p>
+          The Turkish Angora is a breed of domestic cat. Turkish Angoras are one
+          of the ancient, natural breeds of cat, having originated in central
+          Anatolia (Ankara Province in modern-day Turkey).
+        </p>
+      </div>
+      <div>
+        <img src="images/image3.jpeg" alt="catphoto" />
+        <p>
+          The Siamese cat is one of the first distinctly recognised breeds of
+          Asian cat. It derives from the Wichianmat landrace. The Siamese cat is
+          one of several varieties of cats native to Thailand.
+        </p>
+      </div>
+    </section>
+  </body>
 </html>
