--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="styles/styles.css" />
   </head>
   <body>
-    <section>
-      <h1>Cat Species</h1>
-      <div>
+    <section class="quicksand-uniquifier">
+      <h1 class="quicksand-uniquifier">Cat Species</h1>
+      <div class="bengals">
         <img src="images/image1.jpeg" alt="white Cat" />
         <p>
           The Bengal cat is a breed of hybrid cat created from crossing of an
@@ -18,7 +18,7 @@
           Mau.
         </p>
       </div>
-      <div>
+      <div class="turkish">
         <img src="images/image2.jpeg" alt="cat" />
         <p>
           The Turkish Angora is a breed of domestic cat. Turkish Angoras are one
@@ -26,7 +26,7 @@
           Anatolia (Ankara Province in modern-day Turkey).
         </p>
       </div>
-      <div>
+      <div class="siamese">
         <img src="images/image3.jpeg" alt="catphoto" />
         <p>
           The Siamese cat is one of the first distinctly recognised breeds of
